[package]
name = "monoio-tungstenite"
version = "0.1.0"
description = "Asynchronous WebSocket implementation for monoio runtime, adapted from tungstenite."
edition = "2024"
authors = ["pikanohup <hooraypikachu@gmail.com>"]
categories = ["web-programming::websocket", "network-programming", "asynchronous"]
keywords = ["websocket", "monoio", "async"]
repository = "https://github.com/pikanohup/monoio-tungstenite"
documentation = "https://docs.rs/monoio-tungstenite"
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["handshake"]
handshake = ["data-encoding", "http", "httparse", "sha1"]
url = ["dep:url"]

[dependencies]
bytes = "1.10.1"
data-encoding = { version = "2.9.0", optional = true }
http = { version = "1.3.1", optional = true }
httparse = { version = "1.10.1", optional = true }
monoio = "0.2.4"
monoio-codec = "0.3.4"
rand = "0.9.1"
sha1 = { version = "0.10.6", optional = true }
thiserror = "2.0.12"
url = { version = "2.5.4", optional = true }
utf-8 = "0.7.6"

[dev-dependencies]
local-sync = "0.1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[example]]
name = "client"
required-features = ["handshake"]

[[example]]
name = "server"
required-features = ["handshake"]

[[example]]
name = "autobahn-client"
required-features = ["handshake"]

[[example]]
name = "autobahn-server"
required-features = ["handshake"]

[[example]]
name = "callback-error"
required-features = ["handshake"]

[[example]]
name = "interval-server"
required-features = ["handshake"]

[[example]]
name = "srv-accept-unmasked-frames"
required-features = ["handshake"]
