[package]
name = "monoio-tungstenite"
version = "0.1.0"
description = "Asynchronous WebSocket implementation for monoio runtime, adapted from tungstenite."
edition = "2024"
authors = ["pikanohup <hooraypikachu@gmail.com>"]
categories = ["web-programming::websocket", "network-programming", "asynchronous"]
keywords = ["websocket", "monoio", "async"]
repository = "https://github.com/pikanohup/monoio-tungstenite"
documentation = "https://docs.rs/monoio-tungstenite"
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["handshake"]
handshake = ["data-encoding", "http", "httparse", "sha1"]
native-tls = ["monoio-native-tls", "dep:native-tls"]
native-tls-vendored = ["native-tls", "native-tls/vendored"]
rustls-tls = ["monoio-rustls", "rustls", "rustls-pki-types"]
rustls-tls-native-roots = ["rustls-tls", "rustls-native-certs"]
rustls-tls-webpki-roots = ["rustls-tls", "webpki-roots"]
url = ["dep:url"]

[dependencies]
bytes = "1.10.1"
data-encoding = { version = "2.9.0", optional = true }
http = { version = "1.3.1", optional = true }
httparse = { version = "1.10.1", optional = true }
monoio = "0.2.4"
monoio-codec = "0.3.4"
monoio-native-tls = { version = "0.4.0", optional = true }
monoio-rustls = { version = "0.4.0", default-features = false, optional = true }
native-tls = { version = "0.2.14", optional = true }
rand = "0.9.1"
rustls = { version = "0.23.29", default-features = false, optional = true }
rustls-native-certs = { version = "0.8.1", optional = true }
rustls-pki-types = { version = "1.12.0", optional = true }
sha1 = { version = "0.10.6", optional = true }
simdutf8 = "0.1.5"
thiserror = "2.0.12"
url = { version = "2.5.4", optional = true }
webpki-roots = { version = "1.0.2", optional = true }

[dev-dependencies]
local-sync = "0.1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[example]]
name = "client"
required-features = ["handshake"]

[[example]]
name = "server"
required-features = ["handshake"]

[[example]]
name = "autobahn_client"
required-features = ["handshake"]

[[example]]
name = "autobahn_server"
required-features = ["handshake"]

[[example]]
name = "callback_error"
required-features = ["handshake"]

[[example]]
name = "interval_server"
required-features = ["handshake"]

[[example]]
name = "srv_accept_unmasked_frames"
required-features = ["handshake"]
